feat: Implement appointment management in Patient API
- Added CreateAppointmentDto for appointment creation.
- Introduced IAppointmentService interface for appointment operations.
- Developed AppointmentService to handle appointment logic, including creation, updating, and cancellation.
- Created AppointmentsController to expose appointment endpoints.
- Integrated MassTransit for event publishing on appointment creation and cancellation.
- Added RabbitMQ configuration in appsettings.json for communication between services.
- Implemented consumers for handling therapist and appointment events in both Patient and Therapist APIs.
- Updated TherapistService to publish events on therapist creation and updates.
- Added shared event definitions for therapist and appointment events in Shared.Events project.
- Created docker-compose.yml for RabbitMQ setup.

--- a/src/PatientApi/PatientApi.Application/PatientApi.Application.csproj
+++ b/src/PatientApi/PatientApi.Application/PatientApi.Application.csproj
@@ -3,6 +3,11 @@
   <ItemGroup>
     <ProjectReference Include="..\PatientApi.Domain\PatientApi.Domain.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.Common\Shared.Common.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.Events\Shared.Events.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.5.2" />
   </ItemGroup>
 
   <PropertyGroup>
