--- a/src/PatientApi/PatientApi.Presentation/appsettings.json
+++ b/src/PatientApi/PatientApi.Presentation/appsettings.json
@@ -1,12 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Helal;Database=PatientApiDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=Helal;Database=PatientApiDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
+  }
 }
