--- a/src/PatientApi/PatientApi.Infrastructure/PatientApi.Infrastructure.csproj
+++ b/src/PatientApi/PatientApi.Infrastructure/PatientApi.Infrastructure.csproj
@@ -4,9 +4,12 @@
     <ProjectReference Include="..\PatientApi.Domain\PatientApi.Domain.csproj" />
     <ProjectReference Include="..\PatientApi.Application\PatientApi.Application.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.Common\Shared.Common.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.Events\Shared.Events.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.5.2" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
       <PrivateAssets>all</PrivateAssets>
