--- a/src/TherapistApi/TherapistApi.Presentation/appsettings.json
+++ b/src/TherapistApi/TherapistApi.Presentation/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=Helal;Database=TherapistApiDb;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
+  },
   "AllowedHosts": "*"
 }
